# synapse

./: .env.example  .gitignore  README.md  makefile  pyproject.toml
src/agents/: conversation.py  instruction.py  intent.py  master_router.py  memory.py  search.py
src/api/: main.py
src/utils/: caching.py
